--- a/flaskblog/test.html
+++ b/flaskblog/test.html
@@ -1,8 +1,6 @@
 <div style="height:250px; overflow:hidden; position:relative; width:350px">
-    <div class="kbk06"
-        style="-webkit-transition:all .5s; font-size:0px; height:100%; transition:all .5s; width:10000px"><img
-            src="http://localhost:5000/fm/userfiles/201902152036461378.jpg"
-            style="-webkit-transition:all .5s; height:100%; transition:all .5s; width:350px" /><img
-            src="http://localhost:5000/fm/userfiles/201902152042046296.jpg"
-            style="-webkit-transition:all .5s; height:100%; transition:all .5s; width:350px" /></div>
+    <div class="kbk06" style="-webkit-transition:all .5s; font-size:0px; height:100%; transition:all .5s; width:10000px">
+        <img src="http://localhost:5000/fm/userfiles/201902152036461378.jpg" style="-webkit-transition:all .5s; height:100%; transition:all .5s; width:350px" />
+        <img src="http://localhost:5000/fm/userfiles/201902152042046296.jpg" style="-webkit-transition:all .5s; height:100%; transition:all .5s; width:350px" />
+    </div>
 </div>
